<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/AzulEncendido"
    android:orientation="vertical"
    android:padding="8dp"
    >
    <EditText
        android:id="@+id/edTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/first_dialog_add_task"
        />
    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Business"
            android:checked="true"
            android:textColor="@color/white"
        />
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Personal"
            android:textColor="@color/white"
            />
        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Others"
            android:textColor="@color/white"
            />
    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_Task"
        />

</LinearLayout>