<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".appFirst.appFirstActivity"
        android:background="@color/RedWine"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/YourWelcome"
            android:textColor="@color/white"
            android:textSize="32sp"



            android:layout_marginVertical="32dp"
            android:layout_marginHorizontal="16dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/Categories"

            android:layout_marginHorizontal="16dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Task"
            style="@style/FirstAppSubtitule"

            android:layout_marginHorizontal="16dp"

            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:src="@drawable/plusfigurate"
        app:tint="@color/white"
        app:fabSize="normal"

        android:layout_gravity="end|bottom"
        />
</FrameLayout>