<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/AzulMarine"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".imcCalculator.imcCalculatorActivity">

  <androidx.cardview.widget.CardView
      android:id="@+id/viewDots"
      android:layout_width="0dp"
      android:layout_height="150dp"

      app:cardCornerRadius="16dp"

      app:layout_constraintEnd_toStartOf="@+id/viewConsult"

      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"

      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:cardBackgroundColor="@color/AzulMarine"

      >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <ImageView
          android:layout_width="180dp"
          android:layout_height="120dp"
          android:src="@drawable/logodots"
          >

      </ImageView>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="DOTS"
          android:textColor="@color/white"
          android:layout_marginStart="60dp"
          />
    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/viewConsult"
      android:layout_width="0dp"
      android:layout_height="150dp"


      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      app:cardBackgroundColor="@color/AzulMarine"

      app:cardCornerRadius="16dp"

      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/viewDots"
      >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
      <ImageView
          android:layout_width="180dp"
          android:layout_height="120dp"
          android:src="@drawable/doctorfigura"
          >

      </ImageView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Consult"
          android:textColor="@color/white"

          android:textAllCaps="true"
          android:layout_gravity="center"
          >


      </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/viewHeight"
      android:layout_width="0dp"
      android:layout_height="wrap_content"


      android:layout_margin="32dp"
      app:cardBackgroundColor="@color/AzulMarine"
      app:cardCornerRadius="16dp"
      android:orientation="vertical"


      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/viewDots"
      >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center"
        >
      <TextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:textColor="@color/white"
          android:textAllCaps="true"
          android:text="@string/Height"

          />
      <TextView
          android:id="@+id/tvHeight"

          android:text="120 cm"
          android:textSize="38sp"
          android:textStyle="bold"
          android:textColor="@color/white"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          />
      <com.google.android.material.slider.RangeSlider
          android:id="@+id/rsHeight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:stepSize="1"

          android:valueFrom="120"
          android:valueTo="200"
          />
    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView

      android:id="@+id/viewWeight"
      android:layout_width="0dp"
      android:layout_height="150dp"

      app:cardBackgroundColor="@color/AzulMarine"
      app:cardCornerRadius="16dp"

      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"



      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/viewHeight"
      app:layout_constraintEnd_toStartOf="@+id/viewAge"

      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"

        android:layout_marginTop="16dp"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="@string/Weight"
          android:textColor="@color/white"
          android:textAllCaps="true"
          />
      <TextView
          android:id="@+id/tvWeight"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="60"
          android:textStyle="bold"
          android:textSize="38sp"
          android:textColor="@color/white"


          />
      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSubtractWight"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"


            android:src="@drawable/subtracfigurate"
            app:tint="@color/white"
            app:backgroundTint="@color/ClareBlue"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusWight"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/plusfigurate"
            app:tint="@color/white"
            app:backgroundTint="@color/ClareBlue"
            />

      </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/viewAge"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:layout_marginTop="32dp"

      app:cardBackgroundColor="@color/AzulMarine"
      app:cardCornerRadius="16dp"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/viewWeight"
      app:layout_constraintTop_toBottomOf="@id/viewHeight"
      >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Age"
        />
      <TextView
          android:id="@+id/tvAge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:textColor="@color/white"
          android:textSize="38dp"
          android:textStyle="bold"
          android:text="30"
          />
      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:gravity="center"
          >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSubstractAge"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"

            app:backgroundTint="@color/ClareBlue"

            android:src="@drawable/subtracfigurate"
            app:tint="@color/white"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/ClareBlue"
            android:src="@drawable/plusfigurate"
            app:tint="@color/white"
            />

      </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>




  </androidx.cardview.widget.CardView>

<Button
    android:id="@+id/btnCalculate"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:text="@string/Calculate"
    android:textStyle="bold"
    android:textSize="32sp"
    android:textAllCaps="true"
    android:textColor="@color/white"

    android:backgroundTint="@color/AzulMarine"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    />
</androidx.constraintlayout.widget.ConstraintLayout>